<resources>
    <string name="app_name">viernes280723</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cantidad_hint">Ingrese cantidad</string>
    <string name="precio_hint">Ingrese precio</string>
    <string name="producto_hint">Ingrese producto</string>
    <string name="cantidad">Cantidad</string>
    <string name="item_precio">Precio</string>
    <string name="item_producto">Producto</string>
    <string name="app_title">Registro</string>
    <string name="btn_guardar">Guardar</string>
    <string name="total">Total</string>
    <string name="success_message">Información guardada con éxito.</string>
    <string name="productos_agregados">Productos Agregados</string>
    <string name="boton_agregar">Botón agregar</string>
</resources>